<resources>
    <string name="app_name">homeSecurity</string>
    <!--cardview string begin-->
    <string name="go_to_mainpage">login</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <!--cardview string end-->
</resources>
