<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.iotmonitor.lihaizhou.homeSecurity.Activity.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="90%w"
        app:layout_widthPercent="80%w"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <RelativeLayout
            android:layout_marginTop="@dimen/card_header_title_margin"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <View
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:background="@color/view_left_color" />
            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:text="@string/login"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/card_head_title_color"
                android:textSize="@dimen/card_header_title_size"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/username_layout"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/card_edittext_margin_left"
            android:paddingRight="@dimen/card_edittext_margin_right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/card_text_colorhint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_username"
                    android:hint="@string/Username"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/card_edittext_size"
                    android:textColor="@color/card_edittext_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:paddingBottom="@dimen/card_edittext_padding_bottom"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:paddingLeft="@dimen/card_edittext_margin_left"
            android:paddingRight="@dimen/card_edittext_margin_right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/card_text_colorhint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_password"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/card_edittext_padding_bottom"
                    android:textColor="@color/card_edittext_color"
                    android:background="@drawable/selector_bg_edit"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <Button
                android:id="@+id/bt_go"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/bt_shape"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/go_to_mainpage"
                android:textColor="@color/login_btn_text_color">
            </Button>
        </RelativeLayout>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/forget_password_margin_top"
            android:textColor="@color/forget_password_text_color"
            android:textSize="@dimen/forget_password_text_size"
            />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/plus"
        android:transitionName="loginFab"
        android:layout_alignTop="@id/cardview"
        android:layout_marginTop="25dp"
        android:layout_alignRight="@id/cardview"
        android:layout_marginRight="-20dp"
        />

</com.zhy.android.percent.support.PercentRelativeLayout>
